--- a/default/app.conf
+++ b/default/app.conf
@@ -7,7 +7,7 @@ is_configured = 0
 
 [ui]
 is_visible = 1
-label = Splunk App to do analysis of Podcastindex.org data and perform real time queries
+label = Pocastindex.org - podcast insights
 
 [launcher]
 author = Tony Tam
