added Splunk Python lib

--- a/default/commands.conf
+++ b/default/commands.conf
@@ -1,5 +1,5 @@
 [podcastindexsearch]
-chunked = false
+chunked = true
 filename = podcastindex-search.py
 python.version = python3
 generating = true
