remove all failures

--- a/default/app.conf
+++ b/default/app.conf
@@ -1,6 +1,10 @@
 #
-# Splunk app configuration file
+# podcastindex-splunk-app
 #
+[package]
+id =podcastindex-splunk-app
+check_for_updates = true
+show_upgrade_notification = true
 
 [install]
 is_configured = 0
