--- a/default/app.conf
+++ b/default/app.conf
@@ -12,8 +12,9 @@ is_configured = 0
 [ui]
 is_visible = 1
 label = Pocastindex.org - podcast insights
+setup_view = setup_api
 
 [launcher]
 author = Tony Tam
 description = Splunk App to do analysis of Podcastindex.org data and perform real time queries
-version = 0.0.1
+version = 0.0.4
